v3.10.7 (XXXX-XX-XX)
--------------------

* Updated arangosync to v2.17.9.

* FE-243: add support for geo_s2 analyzer.

* FE-22: Don't display collection content by default when clicking on a
  collection in the Web UI.

* Fix incompatibility between 3.9 and 3.10 w.r.t. to serialization of AQL array
  filters (i.e. `[* FILTER ...]`). The array filters were serialized in a
  different way in 3.9 than they are serialized in 3.10. 3.10 also expected the
  new serialization format when unserializing a plan.
  The fix now enables support for both formats.

* Fixed unstable test setting the desired number of servers.

* FE-238: Added auto-login support in core web UI - disabled logout when
  auto-login is enabled, set sessionStorage "jwtUser" value when login is
  skipped.

* Fixed a race in the Maintenance, impacting leaders that have just been
  resigned. During a MoveShard job, the old leader could sabotage the whole
  operation by removing the newly added follower from Current. The solution is
  to update Current using local collection information, instead of the
  potentially outdated velocypack slice.


v3.10.6 (2023-04-27)
--------------------

* Fixed a race in the Maintenance, impacting leaders that have just been
  resigned. During a MoveShard job, the old leader could sabotage the whole
  operation by removing the newly added follower from Current. The solution
  is to update Current using local collection information, instead of the
  potentially outdated velocypack slice.

* Fixed BTS-1292: Added automatic cleanup of dangling ArangoSearch links.

* Automatically repair revision trees after several failed shard synchronization
  attempts. This can help to get permanently out-of-sync shards back into sync.

  The functionality can be turned off by setting the startup option
  `--replication.auto-repair-revision-trees` to `false` on DB-Servers.

* SEARCH-466 Fix leaking into individual link definition inherited properties
  from view.
