@@ -790,7 +790,6 @@ function transactionInvocationSuite (dbParams) {
         }
       }
     },
-
   };
 }
 
@@ -801,11 +800,13 @@ function transactionInvocationSuite (dbParams) {
 function transactionCollectionsSuite (dbParams) {
   'use strict';
   const dbn = 'UnitTestsTransactionDatabase';
-  var cn1 = 'UnitTestsTransaction1';
-  var cn2 = 'UnitTestsTransaction2';
+  const cn1 = 'UnitTestsTransaction1';
+  const cn2 = 'UnitTestsTransaction2';
+  const cn3 = 'UnitTestsTransaction3';
 
-  var c1 = null;
-  var c2 = null;
+  let c1 = null;
+  let c2 = null;
+  let c3 = null;
 
   return {
     setUpAll: function () {
@@ -824,6 +825,9 @@ function transactionCollectionsSuite (dbParams) {
 
       db._drop(cn2);
       c2 = db._create(cn2, {numberOfShards: 4});
+
+      db._drop(cn3);
+      c3 = db._create(cn3, {numberOfShards: 4, shardKeys: ["Hallo"]});
     },
 
     tearDown: function () {
@@ -957,6 +961,26 @@ function transactionCollectionsSuite (dbParams) {
         assertEqual(arangodb.errors.ERROR_TRANSACTION_UNREGISTERED_COLLECTION.code, err.errorNum);
       } finally {
         if (trx) {
+          trx.abort();
+        }
+      }
+    },
+
+    testReadFromNonDeclaredCollection: function () {
+      const trxOpts = { collections: {} };
+      const doc1 = db[cn1].insert({});
+      const doc2 = db[cn2].insert({});
+      const doc3 = db[cn3].insert({});
+      for (let i = 0; i < 100; ++i) {
+        const trx = db._createTransaction(trxOpts)
+        try {
+          let tc1 = trx.collection(c1.name());
+          tc1.document(doc1._key);
+          let tc2 = trx.collection(c2.name());
+          tc2.document(doc2._key);
+          let tc3 = trx.collection(c3.name());
+          tc3.document(doc3._key);
+        } finally {
           trx.abort();
         }
       }
